<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing">Amazing ! (20%)</string>
    <string name="good">Good ! (18%)</string>
    <string name="ok">Ok ! (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount %s</string>
</resources>